--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ theme: jekyll-theme-so-simple
 skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "Arsha Ali Blog"
-description: "As part of 21-Day Writing Challenge."
+description: "Let's Go Writing."
 baseurl: # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: # path of site logo, e.g. "/images/logo.png"
